--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "selector.js",
   "scripts": {
-    //"test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon -e html,js,css ./app.js"
   },
   "author": "",
@@ -14,6 +14,9 @@
     "express": "^4.15.3",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
-    "nunjucks": "^3.0.1"
+    "nunjucks": "^3.0.1",
+    "pg": "^7.1.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.4.2"
   }
 }
