--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "chalk": "^2.1.0",
     "express": "^4.15.3",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
